--- a/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -1,8 +1,18 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="pl.lublin.wsei.java.cwiczenia.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.layout.AnchorPane?>
+
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lublin.wsei.java.cwiczenia.Controller">
+   <children>
+      <ButtonBar layoutX="168.0" layoutY="85.0" prefHeight="40.0" prefWidth="73.0">
+         <buttons>
+            <Button mnemonicParsing="false" onAction="#btnOpenFileAction" text="Button" />
+         </buttons>
+      </ButtonBar>
+      <Label fx:id="lbFile" layoutX="274.0" layoutY="97.0" prefHeight="17.0" prefWidth="459.0" style="fx-font-style: italic;" text="Proszę wczytać plik ..." textFill="#838383" />
+   </children>
+</AnchorPane>
