--- a/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.scene.control.TextField?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lublin.wsei.java.cwiczenia.Controller">
    <children>
       <ButtonBar layoutX="168.0" layoutY="85.0" prefHeight="40.0" prefWidth="73.0" />
@@ -20,7 +19,7 @@
       <Label layoutX="477.0" layoutY="210.0" prefHeight="18.0" prefWidth="66.0" text="Miniaturka" />
       <ImageView fx:id="imgMiniaturka" fitHeight="224.0" fitWidth="267.0" layoutX="477.0" layoutY="238.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="btnPokazInfografike" layoutX="644.0" layoutY="477.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="87.0" text="Pokaż" />
-      <Button fx:id="btnPrzejdzDoStrony" layoutX="644.0" layoutY="615.0" mnemonicParsing="false" text="Załaduj" />
+      <Button fx:id="btnPrzejdzDoStrony" layoutX="644.0" layoutY="615.0" mnemonicParsing="false" onAction="#btnZaladujStrone" text="Załaduj" />
       <TextField fx:id="txtAdresStrony" layoutX="75.0" layoutY="617.0" mouseTransparent="true" prefHeight="26.0" prefWidth="535.0">
          <effect>
             <Lighting>
