--- a/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -18,7 +18,7 @@
       <ListView fx:id="lstInfografiki" layoutX="75.0" layoutY="150.0" prefHeight="416.0" prefWidth="376.0" style="-fx-border-color: gray; -fx-border-width: 1;" />
       <Label layoutX="477.0" layoutY="210.0" prefHeight="18.0" prefWidth="66.0" text="Miniaturka" />
       <ImageView fx:id="imgMiniaturka" fitHeight="224.0" fitWidth="267.0" layoutX="477.0" layoutY="238.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="btnPokazInfografike" layoutX="644.0" layoutY="477.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="87.0" text="Pokaż" />
+      <Button fx:id="btnPokazInfografike" layoutX="644.0" layoutY="477.0" mnemonicParsing="false" onAction="#btnPokazOnAction" prefHeight="30.0" prefWidth="87.0" text="Pokaż" />
       <Button fx:id="btnPrzejdzDoStrony" layoutX="644.0" layoutY="615.0" mnemonicParsing="false" onAction="#btnZaladujStrone" text="Załaduj" />
       <TextField fx:id="txtAdresStrony" layoutX="75.0" layoutY="617.0" mouseTransparent="true" prefHeight="26.0" prefWidth="535.0">
          <effect>
